# seis-cluster-ssl

./: .gitignore  README.md  conftest.py  pyproject.toml
.devcontainer/: .env.example  compose-dev.yaml  devcontainer.json  requirements-dev.txt
docs/: README.md  configuration.md  f3_facies_benchmark_inspection.md  f3_token_level_lithology_probe.md  results_sharing_policy.md  seis_ssl_cluster_runbook.md
proc/seis_ssl_cluster/: __init__.py  build_f3_inspection_report.py  build_f3_lithology_baseline_features.py  build_f3_lithology_baseline_token_dataset.py  build_f3_lithology_comparison_report.py  build_f3_lithology_report.py  build_f3_lithology_token_dataset.py  build_nopims_manifests.py  check_f3_label_consistency.py  cluster_embeddings.py  create_random_mae_checkpoint.py  extract_embeddings.py  filter_manifest_by_normalization_qc.py  inspect_f3_files.py  inspect_f3_png_labels.py  inspect_f3_segy_geometry.py  predict_f3_lithology_tokens.py  prepare_f3_facies_volume.py  prepare_nopims_normalization_stats.py  preview_f3_tokenization.py  train_amp_mae.py  train_f3_lithology_probe.py  validate_results_artifacts.py  visualize_clusters.py  visualize_f3_lithology_predictions.py  visualize_f3_quicklook.py
results/: README.md
results/f3/: README.md
src/seis_ssl_cluster/: __init__.py  _version.py
tests/: helpers.py
tests/seis_ssl_cluster/: __init__.py  test_amplitude_dataset.py  test_amplitude_mae_model.py  test_checkpoint.py  test_cluster_reconstruction.py  test_cluster_visualization.py  test_clustering_features.py  (+42 more)
tools/: check_seis_ssl_cluster_isolation.py
(+247 files in other folders)
