[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seis-cluster-ssl"
dynamic = ["version"]
description = "Amplitude-only 3D seismic self-supervised learning and unsupervised clustering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.24",
	"PyYAML>=6.0",
	"torch>=2.2",
]

[project.optional-dependencies]
dev = [
	"pytest>=7",
	"ruff>=0.4",
]
cluster = [
	"scikit-learn>=1.4",
	"joblib>=1.3",
]
visualization = [
	"matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "seis_ssl_cluster._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
